# cuda-speedup-gpt

./: README.md  pyproject.toml  train_model.ipynb
dataset/: cuda_speedup_tiny.csv
nyu/gpu/speedup/: __main__.py
nyu/gpu/speedup/generator/: __init__.py  variables.py
nyu/gpu/speedup/generator/blocks/: __init__.py  arithmethic_block.py  base_block.py  function_block.py  inter_block.py  logical_block.py  loop_block.py
nyu/gpu/speedup/generator/driver/: __init__.py  driver.py
