[tool.poetry]
name = "nyu.gpu.speedup"
version = "0.0.1"
description = "Data driven approach to prediciting GPU speedup"
authors = ["gcemaj"]

packages = [
    { include = "nyu" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
autogoal = "^0.6.0"
scipy = "^1.8.0"
namesgenerator = "^0.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
